--- a/WebApplicationWsei/Views/Account/Login.cshtml
+++ b/WebApplicationWsei/Views/Account/Login.cshtml
@@ -10,9 +10,9 @@
 <form asp-action="Login" asp-controller="Account" method="post">
     <input type="hidden" asp-for="ReturnUrl" />
     <div class="form-group">
-        <label asp-for="Name">Nazwa użytkownika</label>
-        <div><span asp-validation-for="Name" class="text-danger"></span></div>
-        <input asp-for="Name" class="form-control" />
+        <label asp-for="UserName">Nazwa użytkownika</label>
+        <div><span asp-validation-for="UserName" class="text-danger"></span></div>
+        <input asp-for="UserName" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Password">Hasło</label>
