--- a/WebApplicationWsei/Views/Product/List.cshtml
+++ b/WebApplicationWsei/Views/Product/List.cshtml
@@ -1,23 +1,25 @@
 ﻿@model IQueryable<Product>
 
+    
 
     <div class="row" style="margin: 50px;">
+        <h3>Products</h3>
 
         @foreach (var p in Model)
         {
 
-        <div class="col-sm-4">
-            <div class="card text-center" style="margin: 20px;">
-                <div class="card-body">
-                    <h5 class="card-title">@p.name</h5>
-                    <p class="card-text">@p.description</p>
-                    <a href="#" class="btn btn-primary">@p.price.ToString("c")</a>
+            <div class="col-sm-4">
+                <div class="card text-center" style="margin: 20px;">
+                    <div class="card-body">
+                        <h5 class="card-title">@p.name</h5>
+                        <p class="card-text">@p.description</p>
+                        <a href="#" class="btn btn-primary">@p.price.ToString("c")</a>
+                    </div>
                 </div>
             </div>
-        </div>
-                }
-           
-        </div>
+        }
+
+    </div>
 
 
 
