--- a/WebApplicationWsei/Views/_ViewImports.cshtml
+++ b/WebApplicationWsei/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using WebApplicationWsei.Models
-
+@using WebApplicationWsei.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
