--- a/WebApplicationWsei/Views/Account/Login.cshtml
+++ b/WebApplicationWsei/Views/Account/Login.cshtml
@@ -2,22 +2,42 @@
 @model WebApplicationWsei.Models.ViewModels.LoginModel
 @{
     ViewBag.Title = "Logowanie";
-    Layout = "_AdminLayout";
+    Layout = "_LoginLayout";
 }
 
 <div class="text-danger" asp-validation-summary="All"></div>
 
-<form asp-action="Login" asp-controller="Account" method="post">
-    <input type="hidden" asp-for="ReturnUrl" />
-    <div class="form-group">
-        <label asp-for="UserName">Nazwa użytkownika</label>
-        <div><span asp-validation-for="UserName" class="text-danger"></span></div>
-        <input asp-for="UserName" class="form-control" />
-    </div>
-    <div class="form-group">
-        <label asp-for="Password">Hasło</label>
-        <div><span asp-validation-for="Password" class="text-danger"></span></div>
-        <input asp-for="Password" class="form-control" />
-    </div>
-    <button class="btn btn-primary" type="submit">Zaloguj</button>
-</form>
+@*<form asp-action="Login" asp-controller="Account" method="post">
+        <input type="hidden" asp-for="ReturnUrl" />
+        <div class="form-group">
+            <label asp-for="UserName">Nazwa użytkownika</label>
+            <div><span asp-validation-for="UserName" class="text-danger"></span></div>
+            <input asp-for="UserName" class="form-control" />
+        </div>
+        <div class="form-group">
+            <label asp-for="Password">Hasło</label>
+            <div><span asp-validation-for="Password" class="text-danger"></span></div>
+            <input asp-for="Password" class="form-control" />
+        </div>
+        <button class="btn btn-primary" type="submit">Zaloguj</button>
+    </form>*@
+
+
+        <form asp-action="Login" asp-controller="Account" method="post" class="position-absolute top-50 start-50 translate-middle">
+            <input type="hidden" asp-for="ReturnUrl" />
+            <div class="row mb-3">
+                <label asp-for="UserName" class="col-sm-2 col-form-label">Login</label>
+                <div><span asp-validation-for="UserName" class="text-danger"></span></div>
+                <div class="col-sm-10">
+                    <input asp-for="UserName" class="form-control">
+                </div>
+            </div>
+            <div class="row mb-3">
+                <label asp-for="Password" class="col-sm-2 col-form-label">Hasło</label>
+                <div><span asp-validation-for="Password" class="text-danger"></span></div>
+                <div class="col-sm-10">
+                    <input asp-for="Password" type="password" class="form-control" id="inputPassword3">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Zaloguj</button>
+        </form>
