--- a/WebApplicationWsei/Views/Admin/Index.cshtml
+++ b/WebApplicationWsei/Views/Admin/Index.cshtml
@@ -8,7 +8,7 @@
 
 
 
-    <table class="table table-striped table-boarded table-sm">
+    <table class="table table-striped table-boarded table-sm" style="margin-top: 20px;">
         <tr>
             <th class="text-right">ID</th>
             <th>Produkt</th>
